web/src/main/java/com/turbodev/server/web/page/project/setting/project-setting.css
#project-setting>.sidebar {
	left: 240px;
	background: white;
	border-left: none;
	position: absolute;
	z-index: 0;
}
#project-setting>.sidebar>.tabs>li>a {
	border-left: none;
}
#project>.minimized.sidebar+.content>#project-setting>.sidebar {
	left: 44px;
}
#project-setting .general-setting form .delete {
	margin-right: 0;
}
#project-setting .drag-handle {
	cursor: move;
}
#project-setting .panel-list .drag-handle {
	margin-right: 8px;
}
#project-setting .panel-list .panel-heading a {
	color: #444; 
	margin-right: 8px;
}
#project-setting .panel-list .panel-heading input {
	vertical-align: text-top;
}
#project-setting .panel-list .add-new {
	display: block; 
	padding: 16px; 
	background: #F2F2F2; 
	border: 1px solid #DDD; 
	border-radius: 4px; 
	font-size: 16px; 
	color: #444; 
	margin-bottom: 16px;
}
#project-setting .panel-list a.add-new:hover {
	text-decoration: none; 
	background-color: #EBEBEB; 
	border-color: #ADADAD;
}
#project-setting .panel-list .concrete.list td.path, 
#project-setting .panel-list .concrete.list td.reviewerNames,
#project-setting .panel-list .concrete.list td.reviewAppointment {
	width: 45%;
}

#project-setting .disabled .panel {
	color: #999;
}

#project-setting .commit-message-transform>label {
	float: left;
	margin-right: 4px;
}
#project-setting .commit-message-transform>.help-block {
	margin-top: 20px;
}
#project-setting .authorization.list a.other-sources {
	margin-left: 4px;
	color: #DCB508;
	vertical-align: middle;
}
#project-setting .authorization.list .head .select2-container {
	width: 240px;
} 

